Fix splash screen revealing when jumping to any section

--- a/sass/home/_splash.scss
+++ b/sass/home/_splash.scss
@@ -15,13 +15,11 @@
 
 	@starting-style {
 		&:target {
-			// opacity: 0;
 			transform: translateY(-100%);
 		}
 	}
 
-	body:has(#down:target) & {
-		// opacity: 0;
+	body:has(:target:not(#splash:target)) & {
 		transform: translateY(-100%);
 		visibility: hidden;
 	}
